Fix for map tooltips that are too narrow, with fallback for IE & Edge

--- a/less/gn_map_dutch.less
+++ b/less/gn_map_dutch.less
@@ -173,7 +173,8 @@
       border-radius: 0;
       border-top-right-radius: 2px;
       border-bottom-right-radius: 2px;
-      width: 170px;
+      width: 250px; // IE/Edge fallback
+      width: fit-content;
       text-align: left;
     }
     button {
